# WeatherDisplay

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.celestial  Makefile.mac  Makefile.neopixel  Makefile.ring  Makefile.test  README.md  build-and-install-service.sh  build-and-run.sh  check_deps.sh  config.cpp  config.h  config.json  install-service.sh  lcd.cpp  lcd.h  main.cpp  oled.cpp  oled.h  run-weather.sh  test_celestial  test_neopixel  test_ring  weather.cpp  weather.h  weather_display_mac
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  default.md  enhancement.md  feature.md  pull_request_template.md
.github/workflows/: build.yml
include/: alerter.h  celestial.h  config.h  display_rotation.h  i2c_bus.h  lcd.h  log.h  neopixel.h  oled.h  oled_font.h  ring.h  temperature.h  weather.h  weather_alerts.h  weather_cache.h
scripts/: config.json  led_celestial_display.py  oled_display.py
src/: alerter.cpp  celestial.cpp  config.cpp  config.h  display_rotation.cpp  i2c_bus.cpp  lcd.cpp  lcd_mock.cpp  main.cpp  neopixel.cpp  oled.cpp  oled_font.cpp  ring.cpp  weather.cpp  weather_alerts.cpp  weather_cache.cpp
systemd/: weather-display.service
test/: Makefile.celestial  Makefile.mac  Makefile.neopixel  Makefile.oled  Makefile.ring  test_celestial.cpp  test_neopixel.cpp  test_oled.cpp  test_ring.cpp
